FAdd wordwrap property to tweet body to get rid of long words not wrapping bug.

--- a/sass/tweets.scss
+++ b/sass/tweets.scss
@@ -51,6 +51,7 @@ article.tweet footer div {
 
 article.tweet p {
   font-weight: 600;
+  word-wrap: break-word;
 }
 
 article.tweet header i {
